# crystalite

./: .gitignore  LICENSE  LICENSE-CODE  README.md  pyproject.toml
scripts/: clean_checkpoint.py
src/: __init__.py  eval_crystalite_ckpt.py  eval_csp_ckpt.py  sample_crystalite_ckpt.py  train_crystalite.py
src/crystalite/: __init__.py  crystalite.py  edm_utils.py  sampler.py
src/data/: download_datasets.py  mp20_dataset.py  mp20_tokens.py  perov_lmdb.py  preprocessing_utils.py  split_mp20.py  type_encoding.py
src/eval/: crystal.py  csp_eval.py  diagnostics.py  dng_eval.py  sample_runtime.py  stability.py  uniqueness_novelty.py  wasserstein.py
src/models/: lattice_repr.py  transformer.py  type_encoding.py
src/training/: config.py
src/utils/: __init__.py  checkpoint.py  constants.py  dataset.py  ema.py  joblib.py  rapidash_utils.py  sample_stats.py  seeding.py  stability_logger.py  wandb_utils.py
src/utils/ase_notebook/: __init__.py  atoms_convert.py  configuration.py  draw_utils.py  viewer.py
src/utils/ase_notebook/backend/: gui.py  threejs.py
src/utils/ase_notebook/data/: __init__.py
tests/: test_edm_loss_normalization.py
