[project]
name = "atom-reps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "ase>=3.27.0",
    "chgnet>=0.4.2",
    "datasets>=4.4.2",
    "ipykernel>=7.1.0",
    "lightning>=2.6.0",
    "matminer>=0.9.3",
    "nequip>=0.17.0",
    "p-tqdm>=1.4.2",
    "pandas>=2.2.3",
    "py3dmol>=2.5.3",
    "pymatgen==2024.11.13",
    "pyxtal>=1.1.2",
    "seaborn>=0.13.2",
    "smact==2.6",
    "torch==2.8.0",
    "torch-sim-atomistic>=0.5.2",
    "torchvision==0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
    "svgwrite>=1.4.3",
    "importlib-resources>=6.5.2",
    "submitit>=1.5.4",
    "cairosvg>=2.8.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
